--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
+    "@types/redux-persist": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "uuid": "^11.1.0"
   }
